--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -1,16 +1,3 @@
-/* .sticky-header{
-    background-color: #000;
-}
-
-
-.flex.flex-grow-1 {
-    background-color: #000;
-}
-
-.flex-layout.row--desktop{
-    background-color: #000;
-} */
-
 
 .searchBarContainer {
     width: 770px;
@@ -19,42 +6,16 @@
 }
 
 .imageElement {
-    width: 90%;
+    width: 50%;
+    /* height: 300px; */
+    width: auto;
+    height: auto;
+    object-fit: cover;
+    object-position: bottom;
     cursor: pointer;
     display: block;
     overflow: hidden;
     position: relative;
-    border-radius: 60px;
-    flex-direction: row;
-    transition: all 0s ease 0s;
-    direction: ltr;
-    display: flex;
-    will-change: transform;
-    transform: translate(0%, 0px);
-    margin-left: auto;
-    margin-right: auto;
+    border-radius: 50px;
+    margin: 80px;
 }
-
-/* .bg-base {
-    background-color: #000;
-}
-
-.body.bg-base {
-    background-color: #000;
-} */
-/* 
-.vtex-store__template {
-    background-color: #000;
-}
-.logoLink {
-    background-color: #000;
-}
-.render-provider {
-    background-color: #000;
-}
-.vtex-sticky-layout-0-x-wrapper--sticky-header {
-    background-color: #000;
-    color: #fff;
-} */
-
-/* "base": "#3f3f40", */
